# toparado_blog

./: Dockerfile  pyproject.toml  requirements.txt
blog/core/: settings.py  urls.py
scripts/: commands.sh
