[project]
name = "blog"
version = "0.1.0"
description = "Projeto blog para divugação de vagas de emprego."
authors = [
    {name = "Rafel Jesus",email = "rafael@enotebook.com"}
]
readme = "README.md"
requires-python = ">=3.13.*"
dependencies = [
    "django (>=5.2,<6.0)",
    "psycopg2 (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
