[project]
name = "blog"
version = "0.1.0"
description = "Projeto blog para divugação de vagas de emprego."
authors = [
    {name = "Rafel Jesus",email = "rafael@enotebook.com"}
]
readme = "README.md"
requires-python = ">=3.13.*"
dependencies = [
    "django (>=5.2,<5.3)",
    "psycopg2 (>=2.9.10,<2.10)"
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
# poetry export -f requirements.txt --output requirements.txt

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
